[package]
name = "quaint"
version = "0.2.0-alpha.13"
authors = [
    "Julius de Bruijn <bruijn@prisma.io>",
    "Katharina Fey <kookie@spacekookie.de>",
    "Tom Houlé <tom@tomhoule.com>",
    "Emanuel Jöbstl <emanuel.joebstl@gmail.com>",
    "Matthias Oertel <oertel@prisma.io>",
    "Dominic Petrick <petrick@prisma.io>",
]
edition = "2018"
readme  = "README.md"
license = "Apache-2.0"
description = "An abstraction layer for SQL databases."
repository  = "https://github.com/prisma/quaint/"
homepage    = "https://github.com/prisma/quaint/"
keywords    = ["mysql", "postgresql", "sqlite", "sql"]
documentation = "https://docs.rs/quaint/"

[package.metadata.docs.rs]
features = [ "full", "serde-support", "json-1", "uuid-0_8", "chrono-0_4", "array" ]

[features]
default = []

full = ["pooled", "json-1", "postgresql", "uuid-0_8", "chrono-0_4", "mysql", "mssql"]
full-postgresql = ["pooled", "postgresql", "json-1", "uuid-0_8", "chrono-0_4", "array"]
full-mysql = ["pooled", "mysql", "json-1", "uuid-0_8", "chrono-0_4"]
full-sqlite = ["pooled", "sqlite", "json-1", "uuid-0_8", "chrono-0_4"]
full-mssql = ["pooled", "mssql"]

single = [ "json-1", "postgresql", "uuid-0_8", "chrono-0_4", "mysql", "mssql"]
single-postgresql = ["postgresql", "json-1", "uuid-0_8", "chrono-0_4", "array"]
single-mysql = ["mysql", "json-1", "uuid-0_8", "chrono-0_4"]
single-sqlite = ["sqlite", "json-1", "uuid-0_8", "chrono-0_4"]
single-mssql = ["mssql"]

postgresql = [
    "sqlx/postgres",
    "array",
    "bytes",
    "tokio",
    "bit-vec",
    "ipnetwork"
]

pooled = ["mobc"]
sqlite = ["sqlx/sqlite"]
json-1 = ["serde_json", "base64"]
uuid-0_8 = ["uuid"]
chrono-0_4 = ["chrono"]
mysql = ["sqlx/mysql", "tokio"]
mssql = ["tiberius", "uuid-0_8", "chrono-0_4", "tokio-util"]
tracing-log = ["tracing", "tracing-core"]
array = []
serde-support = ["serde", "chrono/serde"]

[dependencies]
url = "2.1"
metrics = "0.12"
percent-encoding = "2"
once_cell = "1.3"
num_cpus = "1.12"
rust_decimal = "1.6"
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
bigdecimal = "0.1"

sqlx = { git = "https://github.com/pimeys/sqlx", branch = "work-branch", default_features = false, features = ["all-types", "runtime-tokio"], optional = true}

uuid = { version = "0.8", optional = true }
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0.48", optional = true }
base64 = { version = "0.11.0", optional = true }
lru-cache = { version = "0.1", optional = true }

mysql_async = { version = "0.23", optional = true }

tiberius = { version = "0.4", optional = true, features = ["rust_decimal", "sql-browser-tokio", "chrono"] }

log = { version = "0.4", features = ["release_max_level_trace"] }
tracing = { version = "0.1", optional = true }
tracing-core = { version = "0.1", optional = true }

mobc = { version = "0.5.7", optional = true }
bytes = { version = "0.5", optional = true }
tokio = { version = "0.2", features = ["rt-threaded", "macros", "sync"], optional = true}
tokio-util = { version = "0.3", features = ["compat"], optional = true }
serde = { version = "1.0", optional = true }
bit-vec = { version = "0.6.1", optional = true }
ipnetwork = { version = "0.16.0", optional = true }
either = "1.5.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"]}
serde = { version = "1.0", features = ["derive"] }
indoc = "0.3"
names = "0.11"
